--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-pandas
-matplotlib
-seaborn
+streamlit==1.12.0
+pandas==1.4.2
+matplotlib==3.5.2
+seaborn==0.11.2
+numpy==1.21.2
+scipy==1.8.0
+plotly==5.5.0
+requests==2.26.0
